Fixed logging and error handling

--- a/config/jiraminer-config.properties
+++ b/config/jiraminer-config.properties
@@ -1,5 +1,12 @@
-projectID=test
-jira_home=http://localhost:6060
-projects=COM
+#projectID=test1
+#jira_home=http://localhost:6060
+#projects=COM
+#authentication=cookie
+##username=Mario_Rivis
+##password=#Jira123!
+#cookie=JSESSIONID=7C244EB50C93FFB13922E251B3D6EAFA; atlassian.xsrf.token=BBPK-PX8B-NPTB-5W5S_836bd496b3bc8918be09a1b2383bb68548adafed_lin
+projectID=jira
+jira_home=https://jira.endava.com
+projects=INPCH003
 authentication=cookie
-cookie=JSESSIONID=E96741F7E5C783D3FCC7E82E3874D51B; atlassian.xsrf.token=BBPK-PX8B-NPTB-5W5S_babd22b7c0c76f69c628902b0a08daf1e9bdb609_lin
+cookie=ai_user=x/zGI|2020-01-06T14:08:28.402Z; _mkto_trk=id:960-KYA-793&token:_mch-endava.com-1579168622204-39211; _ga=GA1.2.2114248156.1579168622; _hjid=530df4b0-7807-4b5d-b53a-39c114d81848; JSESSIONID=BEC766D554B164103C4D25C98BCA3965; atlassian.xsrf.token=B0H6-JT5D-07P2-AU72_abfa401ade670d1a652fb121e5b798acd41c2cfb_lin; ai_session=Y2BZo|1583859053970|1583859077671.245
